--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <h1 class="mb-0">Cameron
             <span class="text-primary">Robinson</span>
           </h1>
-          <div class="subheading mb-5">156 Sherwood Drive · Lafayette, LA 70501 · (337) 534-7846 ·
+          <div class="subheading mb-5">· Lafayette, LA ·
             <a href="mailto:name@email.com">camrobinson6@gmail.com</a>
           </div>
           <p class="mb-5">I am experienced in QA,and agile frameworks to provide a robust synopsis for high level overviews. Skilled in manual and automated testing and creating test plans.</p>
@@ -239,9 +239,9 @@
             <li class="list-inline-item">
               <i class="devicons devicons-sass"></i>
             </li>
-            <!-- <li class="list-inline-item">
-              <i class="devicons devicons-less"></i>
-            </li> -->
+            <li class="list-inline-item">
+              <i class="devicons devicons-python"></i>
+            </li>
             <li class="list-inline-item">
               <i class="devicons devicons-bootstrap"></i>
             </li>
