--- a/index.html
+++ b/index.html
@@ -239,9 +239,9 @@
             <li class="list-inline-item">
               <i class="devicons devicons-sass"></i>
             </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-python"></i>
-            </li>
+            <!-- <li class="list-inline-item">
+              <i class="devicons devicons-less"></i>
+            </li> -->
             <li class="list-inline-item">
               <i class="devicons devicons-bootstrap"></i>
             </li>
